--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
   border-radius: 10px;
 }
 .logo {
-	margin:50px auto; 
+	margin:50px auto 0px; 
 	width: 100%;
 	display: block;
 	text-align: center;
