--- a/view.css
+++ b/view.css
@@ -1,3 +1,10 @@
+body {
+  background-color: #FEE26D;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
 img,canvas,video {
   /*
   width:500px;
@@ -11,9 +18,39 @@ button {
   height:30px;
   color:white;
 }
+#wrapper {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    padding: 50px;
+}
+.left {
+  float: left;
+  width: 500px;
+  height: 500px;
+  background: url("img/fukidashi.png")
+}
+.right {
+  float: left;
+}
+.movie {
+  display: block;
+}
+#text {
+  padding: 50px 50px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 24px;
+}
+.img {
+  margin-top: 20px;
+  display: block;
+}
 #capture {
   background-color:#008800;
+  display: none;
 }
 #stop {
   background-color:#880000;
+  display: none;
 }
